Important fix: store variables as double again to avoid inaccuracies with runnumber representation

--- a/ResultProcessor/Makefile
+++ b/ResultProcessor/Makefile
@@ -14,7 +14,7 @@ run: $(OBJ)
 Config.o: Config.h Config.cc
 	g++ $(CFLAG) -c  Config.cc
 
-DataSet.o: DataSet.h DataSet.cc Config.h Event.h
+DataSet.o: DataSet.h DataSet.cc Config.h Event.h Variable.h
 	g++ $(CFLAG) -c  DataSet.cc
 
 Event.o: Event.h Event.cc
@@ -35,7 +35,7 @@ MrRA2.o: MrRA2.h MrRA2.cc DataSet.h Config.h GlobalParameters.h PlotBuilder.h Se
 PlotBuilder.o: PlotBuilder.h PlotBuilder.cc DataSet.h Variable.h Config.h GlobalParameters.h Event.h
 	g++ $(CFLAG) -c  PlotBuilder.cc
 
-Selection.o: Selection.h Selection.cc Config.h DataSet.h
+Selection.o: Selection.h Selection.cc Config.h DataSet.h Event.h
 	g++ $(CFLAG) -c  Selection.cc
 
 Variable.o: Variable.h Variable.cc Config.h
