--- a/Skimming/crab.cfg
+++ b/Skimming/crab.cfg
@@ -12,15 +12,32 @@ scheduler  = sge
 #For 2012C-v1, Aug24 : FT_53_V10_AN2
 #For 2012A, Aug06    : FT_53_V6C_AN2
 #For 2012A+B, July13 : FT_53_V6_AN2
+#For Summer12 in 53  : START53_V11
 
 #datasetpath            = /HT/Run2012A-13Jul2012-v1/AOD
 #datasetpath            = /HTMHT/Run2012B-13Jul2012-v1/AOD
 #pycfg_params           = is_data=True,global_tag=FT_53_V6_AN2
 
-datasetpath            = /HTMHT/Run2012C-PromptReco-v2/AOD
-pycfg_params           = is_data=True,global_tag=GR_P_V41_AN2
+#datasetpath            = /HT/Run2012A-recover-06Aug2012-v1/AOD
+#pycfg_params           = is_data=True,global_tag=FT_53_V6C_AN2
 
-pset                   = /afs/naf.desy.de/user/m/mschrode/CMSSW_5_3_3_patch3/src/RA2Classic/Skimming/RA2Preselection_Skimming_resolved.py
+#datasetpath            = /HTMHT/Run2012C-24Aug2012-v1/AOD
+#pycfg_params           = is_data=True,global_tag=FT_53_V10_AN2
+
+#datasetpath            = /HTMHT/Run2012C-PromptReco-v2/AOD
+#pycfg_params           = is_data=True,global_tag=GR_P_V41_AN2
+
+#datasetpath            = /WJetsToLNu_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-PU_S10_START53_V7A-v2/AODSIM
+#datasetpath            = /TTJets_MassiveBinDECAY_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+#datasetpath            = /QCD_Pt-15to3000_TuneZ2star_Flat_8TeV_pythia6/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+#datasetpath            = /ZJetsToNuNu_100_HT_200_TuneZ2Star_8TeV_madgraph/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+#datasetpath            = /ZJetsToNuNu_200_HT_400_TuneZ2Star_8TeV_madgraph/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+datasetpath            = /ZJetsToNuNu_400_HT_inf_TuneZ2Star_8TeV_madgraph/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+pycfg_params           = is_data=False,global_tag=START53_V11
+
+
+
+pset                   = /afs/naf.desy.de/user/m/mschrode/CMSSW_5_3_5/src/RA2Classic/Skimming/RA2Preselection_Skimming_cfg.py
 output_file            = RA2Skim.root
 total_number_of_lumis  = -1
 lumis_per_job          = 50
@@ -29,12 +46,12 @@ events_per_job         = 50000
 
 
 [USER]
-ui_working_dir                  = /afs/naf.desy.de/user/m/mschrode/scratch/crab/HTMHT-Run2012C-v2_V1
+ui_working_dir                  = /afs/naf.desy.de/user/m/mschrode/scratch/crab/ZJets_HT400-Inf_V2
 return_data                     = 0
 copy_data                       = 1
 storage_element                 = T2_DE_DESY
 publish_data                    = 1
-publish_data_name               = RA2PreSelection_Run2012C-v2_V1
+publish_data_name               = RA2PreSelection_Summer12_DR53X-PU_S10_START53_V7A-v1_V2
 dbs_url_for_publication         = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
 publish_with_import_all_parents = 0
 dontCheckSpaceLeft              = 1
