--- a/ResultProcessor/Makefile
+++ b/ResultProcessor/Makefile
@@ -4,7 +4,7 @@ ROOTCFLAGS = $(shell root-config --cflags)
 CFLAG      = -I $(ROOTCFLAGS)
 LFLAG      = $(ROOTLIBS)
 
-OBJ     = Config.o DataSet.o Event.o EventBuilder.o EventInfoPrinter.o GlobalParameters.o MrRA2.o PlotBuilder.o Selection.o Variable.o
+OBJ     = Config.o DataSet.o Event.o EventBuilder.o EventInfoPrinter.o GlobalParameters.o MrRA2.o PlotBuilder.o Selection.o SelectionPrinter.o Variable.o
 
 
 run: $(OBJ)		
@@ -29,7 +29,7 @@ EventInfoPrinter.o: EventInfoPrinter.h EventInfoPrinter.cc Config.h DataSet.h Ev
 GlobalParameters.o: GlobalParameters.h GlobalParameters.cc Config.h
 	g++ $(CFLAG) -c  GlobalParameters.cc
 
-MrRA2.o: MrRA2.h MrRA2.cc DataSet.h Config.h GlobalParameters.h PlotBuilder.h Selection.h Variable.h
+MrRA2.o: MrRA2.h MrRA2.cc DataSet.h Config.h GlobalParameters.h PlotBuilder.h Selection.h SelectionPrinter.h Variable.h
 	g++ $(CFLAG) -c  MrRA2.cc
 
 PlotBuilder.o: PlotBuilder.h PlotBuilder.cc DataSet.h Variable.h Config.h GlobalParameters.h Event.h ../AdditionalInputFiles/RA2PlottingStyle.h
@@ -37,6 +37,9 @@ PlotBuilder.o: PlotBuilder.h PlotBuilder.cc DataSet.h Variable.h Config.h Global
 
 Selection.o: Selection.h Selection.cc Config.h DataSet.h Event.h
 	g++ $(CFLAG) -c  Selection.cc
+
+SelectionPrinter.o: SelectionPrinter.cc SelectionPrinter.h
+	g++ $(CFLAG) -c SelectionPrinter.cc
 
 Variable.o: Variable.h Variable.cc Config.h
 	g++ $(CFLAG) -c  Variable.cc
