--- a/Skimming/crab.cfg
+++ b/Skimming/crab.cfg
@@ -10,7 +10,7 @@ scheduler  = sge
 
 #For 2012A+B (July13 rereco) : FT_53_V6C_AN3
 #For 2012A (Aug06 rereco)    : FT_53_V6C_AN3
-#For 2012C-v1 (Aug24 rereco) : FT_53_V10A_AN3
+#For 2012C-v1 (Aug24 rereco) : FT53_V10A_AN3
 #For 2012C-v2 (prompt reco)  : FT_P_V42C_AN3
 #For 2012D (prompt reco)     : FT_P_V42_AN3
 #For Summer12 in 53X         : START53_V7G
@@ -23,7 +23,7 @@ scheduler  = sge
 
 #datasetpath            = /HTMHT/Run2012C-24Aug2012-v1/AOD
 #datasetpath            = /JetHT/Run2012C-24Aug2012-v2/AOD
-#pycfg_params           = is_data=True,global_tag=FT_53_V10A_AN3
+#pycfg_params           = is_data=True,global_tag=FT53_V10A_AN3
 
 #datasetpath            = /HTMHT/Run2012C-PromptReco-v2/AOD
 #datasetpath            = /JetHT/Run2012C-PromptReco-v2/AOD
