--- a/ResultProcessor/Makefile
+++ b/ResultProcessor/Makefile
@@ -4,7 +4,7 @@ ROOTCFLAGS = $(shell root-config --cflags)
 CFLAG      = -I $(ROOTCFLAGS)
 LFLAG      = $(ROOTLIBS)
 
-OBJ     = Config.o DataSet.o Event.o EventBuilder.o EventYieldPrinter.o GlobalParameters.o MrRA2.o Output.o PlotBuilder.o Selection.o Variable.o
+OBJ     = Config.o DataSet.o Event.o EventBuilder.o EventInfoPrinter.o EventYieldPrinter.o GlobalParameters.o MrRA2.o Output.o PlotBuilder.o Selection.o Variable.o
 
 
 
@@ -24,7 +24,7 @@ Event.o: Event.h Event.cc
 EventBuilder.o: EventBuilder.h EventBuilder.cc Event.h Variable.h
 	g++ $(CFLAG) -c  EventBuilder.cc
 
-EventInfoPrinter.o: EventInfoPrinter.h EventInfoPrinter.cc Config.h DataSet.h Event.h GlobalParameters.h Variable.h
+EventInfoPrinter.o: EventInfoPrinter.h EventInfoPrinter.cc Config.h DataSet.h Event.h Output.h Selection.h Variable.h
 	g++ $(CFLAG) -c  EventInfoPrinter.cc
 
 EventYieldPrinter.o: EventYieldPrinter.cc EventYieldPrinter.h DataSet.h Selection.h
@@ -33,7 +33,7 @@ EventYieldPrinter.o: EventYieldPrinter.cc EventYieldPrinter.h DataSet.h Selectio
 GlobalParameters.o: GlobalParameters.h GlobalParameters.cc Config.h
 	g++ $(CFLAG) -c  GlobalParameters.cc
 
-MrRA2.o: MrRA2.h MrRA2.cc DataSet.h Config.h GlobalParameters.h PlotBuilder.h Selection.h EventYieldPrinter.h Output.h Variable.h
+MrRA2.o: MrRA2.h MrRA2.cc DataSet.h Config.h GlobalParameters.h PlotBuilder.h Selection.h EventInfoPrinter.h EventYieldPrinter.h Output.h Variable.h
 	g++ $(CFLAG) -c  MrRA2.cc
 
 Output.o: Output.h Output.cc GlobalParameters.h 
