--- a/Skimming/crab.cfg
+++ b/Skimming/crab.cfg
@@ -34,13 +34,28 @@ scheduler  = sge
 #pycfg_params           = is_data=True,global_tag=FT_P_V42_AN3
 
 
-#datasetpath            = /WJetsToLNu_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-PU_S10_START53_V7A-v2/AODSIM
+#datasetpath            = /WJetsToLNu_HT-400ToInf_8TeV-madgraph/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+#datasetpath            = /WJetsToLNu_HT-400ToInf_8TeV-madgraph_v2/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
 #datasetpath            = /TTJets_MassiveBinDECAY_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
 #datasetpath            = /QCD_Pt-15to3000_TuneZ2star_Flat_8TeV_pythia6/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
 #datasetpath            = /ZJetsToNuNu_100_HT_200_TuneZ2Star_8TeV_madgraph/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
 #datasetpath            = /ZJetsToNuNu_200_HT_400_TuneZ2Star_8TeV_madgraph/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
 #datasetpath            = /ZJetsToNuNu_400_HT_inf_TuneZ2Star_8TeV_madgraph/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
-#pycfg_params           = is_data=False,global_tag=START53_V7G
+
+#datasetpath            = /QCD_Pt-15to3000_TuneZ2star_Flat_8TeV_pythia6/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+
+datasetpath            = /QCD_HT-100To250_TuneZ2star_8TeV-madgraph-pythia/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+#datasetpath            = /QCD_HT-250To500_TuneZ2star_8TeV-madgraph-pythia6/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+#datasetpath            = /QCD_HT-500To1000_TuneZ2star_8TeV-madgraph-pythia6/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+#datasetpath            = /QCD_HT-1000ToInf_TuneZ2star_8TeV-madgraph-pythia6/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+
+#datasetpath            = /TTJets_SemiLeptMGDecays_8TeV-madgraph/Summer12_DR53X-PU_S10_START53_V7A_ext-v1/AODSIM
+#datasetpath            = /TTJets_FullLeptMGDecays_8TeV-madgraph/Summer12_DR53X-PU_S10_START53_V7A-v2/AODSIM
+#datasetpath            = /TTJets_HadronicMGDecays_8TeV-madgraph/Summer12_DR53X-PU_S10_START53_V7A_ext-v1/AODSIM
+
+
+
+pycfg_params           = is_data=False,global_tag=START53_V7G
 
 
 
@@ -53,12 +68,12 @@ events_per_job         = 50000
 
 
 [USER]
-ui_working_dir                  = /afs/naf.desy.de/user/m/mschrode/sonas/crab/535_V4/JetHT_Run2012D-PromptReco-v1
+ui_working_dir                  = /afs/naf.desy.de/user/m/mschrode/sonas/crab/535_V4/QCD_HT100-250
 return_data                     = 0
 copy_data                       = 1
 storage_element                 = T2_DE_DESY
 publish_data                    = 1
-publish_data_name               = RA2PreSelection_Run2012D-PromptReco-v1_V4
+publish_data_name               = RA2PreSelection_Summer12_DR53X-PU_S10_START53_V7A-v1_V4
 dbs_url_for_publication         = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
 publish_with_import_all_parents = 0
 dontCheckSpaceLeft              = 1
